deployment/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${APP_NAME}
  name: ${APP_NAME}-service
spec:
  type: ClusterIP
  ports:
    - name: websocket
      protocol: TCP
      port: 3941
      targetPort: 3941
  selector:
    app: ${APP_NAME}
---
