deployment/config/nginx-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ${APP_NAME}-ingress
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
spec:
  tls:
    - hosts:
        - vossnack.nl
      secretName: tekton-webhook-ingres-ssecret #TODO: hmm..
  rules:
    - host: vossnack.nl
      http:
        paths:
          - path: /websocket
            pathType: Exact
            serviceName: ${APP_NAME}-service
            servicePort: 3941
# https://www.civo.com/learn/using-websockets-with-ingress-controller
# The part in nginx.ingress.kubernetes.io/server-snippets is what actually upgrades the connection for use with websockets.
---
